--- a/BlazorFrontend/BlazorFrontend/Pages/Home.razor
+++ b/BlazorFrontend/BlazorFrontend/Pages/Home.razor
@@ -1,7 +1,62 @@
 ﻿@page "/"
+@using Services.Dto
+@using Models
+
+@using API
+@inject ApiClient ApiClient
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
+<button @onclick="GetTicketsAsync">GetTickets</button>
+<span>@ErrorMessage</span>
 
-Welcome to your new app.
+@foreach (var ticket in GetAllTicketsResponse)
+{
+    <div class="card">
+        <div>UserName: @ticket.Value</div>
+        <div>@ticket.Key.CreatedDate.ToShortDateString()</div>
+    </div>
+}
+
+
+@code{
+    public Dictionary<Ticket, string> GetAllTicketsResponse { get; set; } = new();
+    public string ErrorMessage { get; set; } = string.Empty;
+
+    public async Task GetTicketsAsync()
+    {
+        GetAllTicketsResponse = new();
+        var tickets = new List<Ticket>();
+        string userName = string.Empty;
+
+        await ApiClient.GetListQueryAsync<Ticket>(
+            ApiClient.TICKET_API_ADRESS,
+            $"getAllTickets",
+            async response =>
+            {
+                tickets = response.ToList();
+                await Task.CompletedTask;
+            },
+            error =>
+            {
+                ErrorMessage = error;
+            });
+
+        foreach (var ticket in tickets)
+        {
+            await ApiClient.GetQueryAsync<User>(
+            ApiClient.USER_API_ADRESS,
+            $"getUserName/{ticket.CustomerId}",
+            async response =>
+            {
+                userName = $"{response.FirstName}, {response.LastName}";
+                await Task.CompletedTask;
+            },
+            error =>
+            {
+                ErrorMessage = error;
+            });
+            GetAllTicketsResponse.Add(ticket, userName);
+        }
+    }
+}
