--- a/BlazorFrontend/BlazorFrontend/wwwroot/css/app.css
+++ b/BlazorFrontend/BlazorFrontend/wwwroot/css/app.css
@@ -16,9 +16,13 @@ a, .btn-link {
     border-color: #1861ac;
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+.filter-input {
+    border: 1px solid #00000063;
 }
+
+/*.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+}*/
 
 .content {
     padding-top: 1.1rem;
